--- a/backup_service/backup_app/templates/backup_list.html
+++ b/backup_service/backup_app/templates/backup_list.html
@@ -2,17 +2,72 @@
 <html>
 <head>
     <title>Backup List</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            padding: 20px;
+        }
+        h2 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            background-color: #fff;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        strong {
+            color: #007bff;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        button {
+            background-color: #dc3545;
+            color: #fff;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: #c82333;
+        }
+        p {
+            text-align: center;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
     <h2>Backup List</h2>
+    <a href="{% url 'home' %}">Home</a>
     {% if backups %}
         <ul>
         {% for backup in backups %}
             <li>
-                <strong>Backup Name:</strong> {{ backup.name }}<br>
-                <strong>Size:</strong> {{ backup.size_in_mb }} MB<br>
+                <strong>Backup Name:</strong> {{ backup.backup_name }}<br>
+                <strong>Description:</strong> {{ backup.description }}<br>
                 {% if backup.file %}
                     <strong>File:</strong> <a href="{{ backup.file.url }}">{{ backup.file.name }}</a><br>
+                    <!-- Agregar enlace para eliminar el backup -->
+                    <form method="post" action="{% url 'delete_backup' backup.id %}">
+                        {% csrf_token %}
+                        <button type="submit">Delete</button>
+                    </form>
                 {% else %}
                     <strong>File:</strong> No file uploaded<br>
                 {% endif %}
